Starte implementing data exploration, onyl html header for the table done currently

--- a/templates/overview.html
+++ b/templates/overview.html
@@ -46,6 +46,13 @@
             opacity: 0.8;
         }
 
+        button:disabled {
+            background-color: dimgrey;
+            color: linen;
+            opacity: .9;
+            cursor: default;
+        }
+
         .p_title {
             margin: 5px;
         }
