--- a/templates/tabs/arbeitsplanung.html
+++ b/templates/tabs/arbeitsplanung.html
@@ -38,6 +38,7 @@
         padding: 5px;
         background-color: rgb(225, 225, 225);
         border-radius: 10px;
+        height: fit-content;
     }
 </style>
 <div id="main_time_view">
