--- a/templates/tabs/data.html
+++ b/templates/tabs/data.html
@@ -1,23 +1,27 @@
 <style>
-    .folder {
-        width: 150px;
-        height: 105px;
-        margin: 0 auto;
-        margin-top: 50px;
-        position: relative;
-        background-color: rgb(214, 203, 80);
-        border-radius: 0 6px 6px 6px;
-        box-shadow: 4px 4px 7px rgba(0, 0, 0, 0.59);
+    object {
+        width: 100%;
+        height: 100vh;
     }
 
-    .folder:before {
+    .folder {
+        width: 47px;
+        height: 32px;
+        position: relative;
+        background-color: rgb(236, 180, 72);
+        border-radius: 0 6px 6px 6px;
+        box-shadow: 4px 4px 7px rgba(0, 0, 0, 0.59);
+        margin-left: -10px;
+    }
+
+    .folder::before {
         content: '';
         width: 50%;
-        height: 12px;
-        border-radius: 0 20px 0 0;
-        background-color: rgb(214, 203, 80);
+        height: 4px;
+        border-radius: 0 5px 0 0;
+        background-color: rgb(236, 180, 72);
         position: absolute;
-        top: -12px;
+        top: -4px;
         left: 0px;
     }
 
@@ -182,70 +186,173 @@
     .file-icon[data-type=png] {
         background: #f4b400;
     }
-    
+
     .file-icon[data-type=zip] {
         background: #f6cd5c;
     }
-    
+
 
     #folder_explorer_header {
         display: grid;
-        grid-template-columns: repeat(4, auto);
+        grid-template-columns: 50px repeat(4, auto);
     }
-    .header_div{
+
+    .header_div {
         border-top: solid 1px lightgray;
         border-bottom: solid 1px lightgray;
         font-weight: bold;
         padding: 15px;
         background-color: #d5d4d4;
     }
-    .le_div{
+
+    .le_div {
         border-top: solid 1px lightgray;
         border-bottom: solid 1px lightgray;
         padding: 15px;
+        padding-bottom: 10px;
+        height: 35px;
+    }
+
+    .less_top_gap {
+        margin-top: -5px;
+    }
+
+    #search_input {
+        width: auto;
+        margin-left: 20px;
     }
 </style>
 
 <div id="file_explorer">
     <div id="tree_search">Here comes the search and tree</div>
     <div id="folder_explorer_header">
+        <div id="add_header" class="header_div">+</div>
         <div id="name_header" class="header_div">Name</div>
         <div id="size_header" class="header_div">Gr&ouml;sse</div>
         <div id="changed_header" class="header_div">Bearbeitet von</div>
         <div id="change_date_header" class="header_div">Ge&auml;ndert</div>
     </div>
-    <div id="folder_explorer_list"></div>
+</div>
+<div id="document_viewer" style="display:none">
+    <object id="document_renderer"></object>
 </div>
 
 <script>
-    var cur_directory = "";
-    
-    async function setup_file_explorer() {
-        let files = await get_file_list(cur_directory);
-        update_explorer_list(files);
+    const base_dir = "";
+    var cur_directory = base_dir;
+
+    function setup_file_explorer() {
+        reload_cur_directory();
     }
-    
+
+    function update_tree_search() {
+        let directories = cur_directory.split('/');
+        let inner = "<a onclick='cur_directory=base_dir; reload_cur_directory()'>Daten</a>";
+        let composed_dir = "";
+        let first = true;
+        for (let dir of directories) {
+            if (!first)
+                composed_dir += "/";
+            first = false;
+            composed_dir += dir;
+            inner += "/<a onclick='cur_directory=\"" + composed_dir + "\"; reload_cur_directory();'>" + dir + "</a>";
+        }
+        inner += "<input id='search_input' type='text' placeholder='Suchbegriff eingeben'>"
+        document.getElementById("tree_search").innerHTML = inner;
+    }
+
     function get_icon(extension) {
         if (extension.length == 0)
-            return "<div class='folder'></div>";
-        return "<div class='file-icon' data-type='" +  + "'
+            return "<div class='less_top_gap folder'></div>";
+        return "<div class='less_top_gap file-icon' data-type='" + extension + "'></div>";
     }
+    function data_pretty_date(date) {
+        return new Intl.DateTimeFormat('de-DE', { weekday: 'short', month: 'numeric', day: 'numeric', year: 'numeric', hour: 'numeric', minute: 'numeric' }).format(new Date(Date.parse(date)));
+    };
+
+    function niceBytes(x) {
+        const units = ['B', 'KiB', 'MiB', 'GiB', 'TiB', 'PiB', 'EiB', 'ZiB', 'YiB'];
+
+        let l = 0, n = parseInt(x, 10) || 0;
+
+        while (n >= 1024 && ++l) {
+            n = n / 1024;
+        }
+
+        return (n.toFixed(n < 10 && l > 0 ? 1 : 0) + ' ' + units[l]);
+    }
+
     function update_explorer_list(files_json) {
-        let list = document.getElementById("folder_explorer_list");
-        list.innerHTML = "";
-        for(let element of files_json["elements"]) {
-            list.innerHTML += "<div class='le_div'>" + element.name + "</div>";
-            list.innerHTML += "<div class='le_div'>" + element.size + "</div>";
+        let list = document.getElementById("folder_explorer_header");
+        for (let node of list.querySelectorAll(".le_div")) {
+            list.removeChild(node);
+        }
+        files_json.elements.sort((a, b) => {
+            if (a.size == 0)
+                return -1;
+            if (b.size == 0)
+                return 1;
+            return a.name < b.name;
+        });
+        for (let element of files_json.elements) {
+            list.innerHTML += "<div class='le_div'>" + get_icon(element.extension) + "</div>";
+            if (element.extension.length > 0)
+                list.innerHTML += "<div class='le_div'><a onclick='open_data(\"/daten/" + element.full_path + "\", \"" +  element.extension + "\");'>" + element.name + "</a></div>";
+            else
+                list.innerHTML += "<div class='le_div'><a onclick='cur_directory=\"" + element.full_path + "\"; reload_cur_directory();'>" + element.name + "</a></div>";
+            list.innerHTML += "<div class='le_div'>" + (element.size == 0 ? "" : niceBytes(element.size)) + "</div>";
             list.innerHTML += "<div class='le_div'>" + element.changed_by + "</div>";
-            list.innerHTML += "<div class='le_div'>" + element.change_date + "</div>";
+            list.innerHTML += "<div class='le_div'>" + data_pretty_date(element.change_date) + "</div>";
+        }
+    }
+
+    async function get_file_list(directory) {
+        let res = await fetch("/daten/" + directory, { headers: { credentials: user_credentials } });
+        res = await res.json();
+        return res;
+    }
+
+    async function reload_cur_directory() {
+        let files = await get_file_list(cur_directory);
+        if ("error" in files)
+            console.log(files);
+        else {
+            update_explorer_list(files);
+            update_tree_search();
         }
     }
     
-    async function get_file_list(directory) {
-        let res = await fetch("/daten/" + directory, {headers: {credentials: user_credentials}});
-        re = await res.json();
-        return res;
+    async function open_data(data_file, extension) {
+        // todo: store fetched pdf to show
+        let data = await fetch(data_file, {headers: {credentials: user_credentials}});
+        data = await data.blob();
+        let url = URL.createObjectURL(data);
+        let renderer = document.getElementById("document_renderer");
+        renderer.setAttribute("data", url);
+        switch(extension){
+        case "json":
+        case "xml":
+        case "pdf": renderer.setAttribute("type", "application/" + extension); break;
+        case "ods":
+        case "xlsm":
+        case "xls":
+        case "xltx":
+        case "xltm":
+        case "xlsx": renderer.setAttribute("type", "application/vnd.ms-excel");
+        case "jpeg":
+        case "jpg":
+        case "gif":
+        case "svg":
+        case "png": renderer.setAttribute("type", "image/" + extension); break;
+        case "wav":
+        case "ogg":
+        case "mp3": renderer.setAttribute("type", "audio/" + extension); break;
+        case "webm":
+        case "mp4": renderer.setAttribute("type", "video/" + extension); break;
+        default : renderer.setAttribute("type", "text/plain"); break;
+        }
+        document.getElementById("document_viewer").style.display = "block";
     }
-    
+
     setup_file_explorer();
 </script>
