--- a/templates/tabs/stempeluhr.html
+++ b/templates/tabs/stempeluhr.html
@@ -40,6 +40,13 @@
         border-radius: 20px;
     }
 
+    .timeclock_button:disabled {
+        background-color: dimgrey;
+        color: linen;
+        opacity: .9;
+        cursor: default;
+    }
+
     .collapsible_header {
         background-color: gray;
         color: white;
