Started to add data upload, nearly done.

--- a/templates/overview.html
+++ b/templates/overview.html
@@ -156,7 +156,7 @@
 <body>
     <div style="contain: content;">
         <div id="logout">
-            <p style="margin-top: 1.3em;">Eingeloggt als <b>{{benutzername}}</b></p>
+            <p style="margin-top: 1.3em;">Eingeloggt als <b style="float:none;">{{benutzername}}</b></p>
             <div style="width: 10px"></div>
             <button onclick="window.location = window.location.origin;">Logout</button>
         </div>
